--- a/index.html
+++ b/index.html
@@ -7,7 +7,36 @@
     <title>News App Demo</title>
     <link rel="stylesheet" href="/assets/style.css">
 </head>
+<section class="container">
+    <ul class="search-results">
+        {{ range .Results.Articles }}
+        <li class="news-article">
+            <div>
+                <a target="_blank" rel="noreferrer noopener" href="{{.URL}}">
+                    <h3 class="title">{{.Title }}</h3>
+                </a>
+                <p class="description">{{ .Description }}</p>
+                <div class="metadata">
+                    <p class="source">{{ .Source.Name }}</p>
+                    <time class="published-date">{{ .PublishedAt }}</time>
+                </div>
+            </div>
+            <img class="article-image" src="{{ .URLToImage }}">
+        </li>
+        {{ end }}
+    </ul>
+</section>
 <body>
-<h1>News App Demo</h1>
+<main>
+    <header>
+        <a class="logo" href="/">News Demo</a>
+        <form action="/search" method="GET">
+            <input autofocus class="search-input" value="{{ .SearchKey }}" placeholder="Enter a news topic"
+                   type="search" name="q">
+        </form>
+        <a href="https://github.com/freshman-tech/news" class="button
+      github-button">View on Github</a>
+    </header>
+</main>
 </body>
 </html>
