--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="/assets/style.css">
 </head>
 <section class="container">
+    <div class="result-count">
+        {{ if (gt .Results.TotalResults 0)}}
+        <p>About <strong>{{ .Results.TotalResults }}</strong> results were found.</p>
+        {{ else if (ne .SearchKey "") and (eq .Results.TotalResults 0) }}
+        <p>No results found for your query: <strong>{{ .SearchKey }}</strong>.</p>
+        {{ end }}
+    </div>
     <ul class="search-results">
         {{ range .Results.Articles }}
         <li class="news-article">
@@ -18,7 +25,7 @@
                 <p class="description">{{ .Description }}</p>
                 <div class="metadata">
                     <p class="source">{{ .Source.Name }}</p>
-                    <time class="published-date">{{ .PublishedAt }}</time>
+                    <time class="published-date">{{ .FormatPublishedDate }}</time>
                 </div>
             </div>
             <img class="article-image" src="{{ .URLToImage }}">
